navbar no longer overlaps page content

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -28,7 +28,6 @@
 }
 
 .icons{
-  padding-top: 7px;
   z-index: 102;
   position:relative;
 }
